--- a/#src/pug/layout/app_layout.pug
+++ b/#src/pug/layout/app_layout.pug
@@ -31,6 +31,7 @@ html(lang="ru")
 										block side-bar
 									._editor
 										block editor
+									block move-content 
 							footer._footer
 								block footer 
 				block modal
