--- a/#src/pug/layout/footer.pug
+++ b/#src/pug/layout/footer.pug
@@ -1,11 +1,13 @@
 footer.footer 
 	._column 
-		._items  find me in:
-			a(href="http://t.me/allexandrw" target='_blanck')._items-link
+		._items 
+			span find me in:
+			a(href="http://t.me/allexandrw" target='_blank')._items-link
 				+iconfont('telegram')
 	._column 
 		//- include ../modules/clock
 	._column
-		._items Git-Hub
-			a(href="https://github.com/Dennchik" target='_blanck')._items-link 
+		._items 
+			span Git-Hub
+			a(href='https://github.com/Dennchik' target='_blank')._items-link 
 				+iconfont('git-hub-circle')
