--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -21,6 +21,8 @@ block editor
 		section._section
 			include ../partials/section-project 
 		include ../partials/section-terminal
+block move-content 
+	.move-content 
 block footer 
 	include ../layout/footer
 block modal 
