--- a/#src/pug/partials/section-hello.pug
+++ b/#src/pug/partials/section-hello.pug
@@ -35,8 +35,8 @@
 					span const 
 					span &nbsp;githubLink
 					span &nbsp;&#61;&nbsp;
-					+link('https://github.com/Dennchik', 'https://github.com/example/url')(target="_blank" data-type="link")
-	._column(data-move-el="[{'bp-max': 690, 'index': 1, 'target': '.bp-2'}]") 
+					+link('', 'https://github.com/Dennchik', 'https://github.com/example/url')(target="_blank" data-type="link")
+	._column.gutter-col(data-move-el="[{'bp-max': 690, 'index': 1, 'target': '.bp-2'}]") 
 		._row 
 			._pagination-number 
 	._column(data-move-el="[{'bp-max': 690, 'index': 1, 'target': '.bp-1'}]")
