--- a/#src/pug/partials/section-terminal.pug
+++ b/#src/pug/partials/section-terminal.pug
@@ -1,7 +1,8 @@
 .terminal
 	._items
 		._title 
-			._title-col TERMINAL_
+			._title-col
+				+iconfont('terminal-arw')
 			._close-btn
 				+iconfont("cross-middle")
 		._body 
