--- a/#src/pug/partials/swiper.pug
+++ b/#src/pug/partials/swiper.pug
@@ -1,6 +1,6 @@
 .mainslide.hello-page__row
   ._body._swiper 
-    ._slide
+    ._slide()
       .content-mainslide._content
         ._image
           img(src="@@webRoot/img/main/screen-4.png" alt="image")  
