--- a/#src/scss/core/_variables-icon.scss
+++ b/#src/scss/core/_variables-icon.scss
@@ -6,13 +6,118 @@ $icon-javascript: '\e952';
 $icon-java: '\e953';
 $icon-vue-dot-js: '\e954';
 $icon-node-dot-js: '\e955';
-$icon-document-file-java: '\e956';
-$icon-document-file-java1: '\e957';
-$icon-file-java: '\e958';
-$icon-file-java1: '\e959';
 $icon-money-bag: '\e919';
+$icon-document-file-java: '\e956';
+$icon-document-java: '\e957';
+$icon-file-java: '\e958';
+$icon-file-java-o: '\e959';
 $icon-dollar-money: '\e91f';
 $icon-dollars: '\e91a';
+$icon-bug: '\f188';
+$icon-css3: '\e900';
+$icon-resistance: '\e904';
+$icon-fonticons: '\f280';
+$icon-desktop: '\f108';
+$icon-laptop: '\f109';
+$icon-tablet: '\f10a';
+$icon-mobile-phone: '\f10b';
+$icon-bell-slash: '\f1f6';
+$icon-bell-slash-o: '\f1f7';
+$icon-calendar-plus-o: '\f271';
+$icon-calendar-minus-o: '\f272';
+$icon-calendar-times-o: '\f273';
+$icon-calendar-check-o: '\f274';
+$icon-optin-monster: '\f23c';
+$icon-e-mail: '\f003';
+$icon-phone: '\f095';
+$icon-globe: '\e903';
+$icon-drivers-license: '\f2c2';
+$icon-drivers-license-o: '\f2c3';
+$icon-list-alt: '\f022';
+$icon-visa: '\f1f0';
+$icon-mastercard: '\f1f1';
+$icon-discover: '\f1f2';
+$icon-amex: '\f1f3';
+$icon-pay-pal: '\f1f4';
+$icon-stripe: '\f1f5';
+$icon-flag-lg: '\f024';
+$icon-user-o: '\e911';
+$icon-sign-out: '\e916';
+$icon-sign-in: '\e917';
+$icon-cloud-download: '\f0ed';
+$icon-cloud-upload: '\f0ee';
+$icon-truck: '\f0d1';
+$icon-wrench: '\f0ad';
+$icon-magic: '\f0d0';
+$icon-users-tie: '\e90f';
+$icon-black-tie: '\f27e';
+$icon-thumb-up: '\f164';
+$icon-thumb-down: '\f165';
+$icon-hand-grab-o: '\f255';
+$icon-hand-paper-o: '\f256';
+$icon-hand-scissors-o: '\f257';
+$icon-hand-lizard-o: '\f258';
+$icon-hand-spock-o: '\f259';
+$icon-hand-pointer-o: '\f25a';
+$icon-hand-peace-o: '\f25b';
+$icon-hand-shake: '\f2b5';
+$icon-thumbs-up: '\f087';
+$icon-thumbs-down: '\f088';
+$icon-exchange: '\f0ec';
+$icon-angle-left: '\f104';
+$icon-angle-right: '\f105';
+$icon-angle-up: '\f106';
+$icon-angle-down: '\f107';
+$icon-free-code-camp: '\f2c5';
+$icon-terminal-arw: '\f120';
+$icon-code: '\f121';
+$icon-file-pdf-o: '\f1c1';
+$icon-file-word-o: '\f1c2';
+$icon-file-excel-o: '\f1c3';
+$icon-file-powerpoint-o: '\f1c4';
+$icon-file-image-o: '\f1c5';
+$icon-file-archive-o: '\f1c6';
+$icon-file-audio-o: '\f1c7';
+$icon-file-movie-o: '\f1c8';
+$icon-file-code-o: '\f1c9';
+$icon-book: '\f02d';
+$icon-fire-resistance: '\e905';
+$icon-cogs-gears: '\e995';
+$icon-cogs-gear: '\f085';
+$icon-cog-md: '\f013';
+$icon-cog-lg: '\e994';
+$icon-star: '\f005';
+$icon-star-o: '\f006';
+$icon-rub: '\f159';
+$icon-bookmark-lg: '\f02e';
+$icon-bookmark-o: '\f097';
+$icon-file: '\e914';
+$icon-file-text: '\e915';
+$icon-folder-open: '\f07c';
+$icon-folder-closed: '\f07b';
+$icon-folder-open-o: '\f117';
+$icon-folder-closed-o: '\f116';
+$icon-code-fork: '\f126';
+$icon-print: '\f02f';
+$icon-save: '\f0c7';
+$icon-toggle-off: '\f204';
+$icon-toggle-on: '\f205';
+$icon-copy-files-o: '\f0c5';
+$icon-check-square-o: '\f046';
+$icon-square-o: '\f096';
+$icon-expedited-ssl: '\f23e';
+$icon-tasks: '\f0ae';
+$icon-table: '\f0ce';
+$icon-window-close: '\f2d3';
+$icon-paper-clip: '\f0c6';
+$icon-cut: '\f0c4';
+$icon-sort-alpha-asc: '\f15d';
+$icon-sort-alpha-desc: '\f15e';
+$icon-compress: '\f066';
+$icon-power-off: '\f011';
+$icon-signal: '\f012';
+$icon-currency-dollar: '\e918';
+$icon-coin-dollar: '\e940';
 $icon-google-plus-sq: '\ea8c';
 $icon-google-plus-circle: '\ea8d';
 $icon-google-drive: '\ea8f';
@@ -44,85 +149,23 @@ $icon-android: '\eac0';
 $icon-finder: '\eabf';
 $icon-appleinc: '\eabe';
 $icon-tux: '\eabd';
-$icon-yahoo2: '\eabc';
-$icon-yahoo: '\eabb';
-$icon-tumblr2: '\eaba';
-$icon-tumblr: '\eab9';
+$icon-yahoo: '\eabc';
+$icon-yahoo-o: '\eabb';
+$icon-tumb-tlr: '\eaba';
+$icon-tumb-lr: '\eab9';
 $icon-opera: '\eade';
 $icon-safari: '\eae0';
 $icon-edge: '\eadc';
-$icon-IE: '\eae4';
+$icon-ie: '\eae4';
 $icon-firefox: '\eada';
 $icon-chrome: '\ead9';
 $icon-paypal: '\ead8';
 $icon-npm: '\eab1';
 $icon-onedrive: '\eaaf';
 $icon-dropbox: '\eaae';
-$icon-steam2: '\eaad';
-$icon-steam: '\eaac';
-$icon-angle-double-down: '\e948';
-$icon-angle-double-up: '\e949';
-$icon-angle-double-right: '\e94a';
-$icon-angle-double-left: '\e94b';
-$icon-angles-left-solid: '\e94c';
-$icon-angles-right-solid: '\e94f';
-$icon-angles-up-solid: '\e94d';
-$icon-angles-down-solid: '\e94e';
-$icon-cross-middle: '\e944';
-$icon-arrow-select: '\e93e';
-$icon-check-box: '\e946';
-$icon-undo-prew: '\e967';
-$icon-redo-next: '\e979';
-$icon-forward-left: '\e97e';
-$icon-forward-righ: '\e985';
-$icon-arrow-up-left: '\ea43';
-$icon-arrow-up: '\ea44';
-$icon-arrow-up-right: '\ea45';
-$icon-arrow-right: '\ea46';
-$icon-arrow-down-right: '\ea47';
-$icon-arrow-down: '\ea48';
-$icon-arrow-down-left: '\ea49';
-$icon-arrow-left: '\ea4a';
-$icon-circle-up: '\ea4b';
-$icon-circle-right: '\ea4c';
-$icon-circle-down: '\ea4d';
-$icon-circle-left: '\ea4e';
-$icon-tab: '\ea4f';
-$icon-grid: '\e942';
-$icon-currency-dollar: '\e918';
-$icon-coin-dollar: '\e940';
-$icon-community: '\e901';
-$icon-consultancy: '\e902';
-$icon-consulting: '\e90c';
-$icon-terminal: '\ea81';
-$icon-share-social: '\ea82';
-$icon-mail-contact: '\ea83';
-$icon-mail-circle: '\ea86';
-$icon-mail: '\e93d';
-$icon-whatsapp: '\ea93';
-$icon-html-five-o: '\eae5';
-$icon-lock-secure: '\e98f';
-$icon-unlocked: '\e990';
-$icon-power-cord: '\e9b7';
-$icon-download: '\e9c5';
-$icon-upload: '\e9c6';
-$icon-download-save: '\e9c7';
-$icon-up-load: '\e9c8';
-$icon-sphere-globe: '\e9c9';
-$icon-link-chain: '\e9cb';
-$icon-flag: '\e9cc';
-$icon-en-large: '\e989';
-$icon-en-small: '\e98a';
-$icon-expand-collapse: '\e98b';
-$icon-shrink-collapse: '\e98c';
-$icon-bubble-comment: '\e96b';
-$icon-bubbles-comments-t: '\e96c';
-$icon-bubbles-comments-f: '\e96d';
-$icon-bubble-comment-l: '\e96e';
-$icon-bubbles-comments-lb: '\e96f';
-$icon-bubbles-comments-lbf: '\e970';
-$icon-quotes-left: '\e977';
-$icon-quotes-right: '\e978';
+$icon-steam: '\eaad';
+$icon-steam-o: '\eaac';
+$icon-spinner-loading-11: '\e984';
 $icon-spinner-loading: '\e97a';
 $icon-spinner-loading-2: '\e97b';
 $icon-spinner-loading-3: '\e97c';
@@ -132,115 +175,12 @@ $icon-spinner-loading-7: '\e980';
 $icon-spinner-loading-8: '\e981';
 $icon-spinner-loading-9: '\e982';
 $icon-spinner-loading-10: '\e983';
-$icon-spinner-loading-11: '\e984';
-$icon-folder-download: '\e933';
-$icon-folder-upload: '\e934';
-$icon-folder-directory: '\e92f';
-$icon-folder-open-directory: '\e930';
-$icon-folder-plus: '\e931';
-$icon-folder-minus: '\e932';
-$icon-enter-signin: '\ea41';
-$icon-exit-signout: '\ea42';
-$icon-tree-branches: '\e9be';
-$icon-droplet: '\e90b';
-$icon-image: '\e90d';
-$icon-images: '\e90e';
-$icon-head-phones: '\e910';
-$icon-video: '\e913';
-$icon-connection-wifi: '\e91b';
-$icon-podcast: '\e91c';
-$icon-feed-wave: '\e91d';
-$icon-mic: '\e91e';
-$icon-credit-card: '\e93f';
-$icon-zoom-in: '\e987';
-$icon-zoom-out: '\e988';
-$icon-equalizer: '\e993';
-$icon-switch: '\e9b6';
-$icon-clipboard: '\e9b8';
-$icon-contrast: '\e9d5';
+$icon-mail: '\e93d';
+$icon-mail-contact: '\ea83';
+$icon-mail-circle: '\ea86';
+$icon-whatsapp: '\ea93';
 $icon-heart-like: '\e9da';
 $icon-heart-broken: '\e9db';
-$icon-point-up: '\ea03';
-$icon-point-right: '\ea04';
-$icon-point-down: '\ea05';
-$icon-point-left: '\ea06';
-$icon-play: '\ea15';
-$icon-pause: '\ea16';
-$icon-stop: '\ea17';
-$icon-previous: '\ea18';
-$icon-next: '\ea19';
-$icon-backward: '\ea1a';
-$icon-forward: '\ea1b';
-$icon-play-1: '\ea1c';
-$icon-pause-1: '\ea1d';
-$icon-stop-1: '\ea1e';
-$icon-backward-1: '\ea1f';
-$icon-forward-1: '\ea20';
-$icon-first-1: '\ea21';
-$icon-last-1: '\ea22';
-$icon-previous-1: '\ea23';
-$icon-next-1: '\ea24';
-$icon-eject-1: '\ea25';
-$icon-volume-high-1: '\ea26';
-$icon-volume-medium-1: '\ea27';
-$icon-volume-low-1: '\ea28';
-$icon-volume-mute-2: '\ea29';
-$icon-volume-mute-1: '\ea2a';
-$icon-volume-increase-1: '\ea2b';
-$icon-volume-decrease-1: '\ea2c';
-$icon-loop-repeat: '\ea2d';
-$icon-repeat: '\ea2e';
-$icon-infinite: '\ea2f';
-$icon-shuffle-random: '\ea30';
-$icon-paragraph-left: '\ea77';
-$icon-paragraph-center: '\ea78';
-$icon-paragraph-right: '\ea79';
-$icon-paragraph-justify: '\ea7a';
-$icon-indent-increase: '\ea7b';
-$icon-indent-decrease: '\ea7c';
-$icon-amazon: '\ea87';
-$icon-html-five: '\eae9';
-$icon-rss: '\ea9b';
-$icon-rss-sq: '\ea9c';
-$icon-file-word: '\eae1';
-$icon-file-excel: '\eae2';
-$icon-libreoffice: '\eae3';
-$icon-bookmark: '\e9d2';
-$icon-bookmarks: '\e9d3';
-$icon-tags-black: '\e90a';
-$icon-tags: '\e909';
-$icon-price-tag: '\e935';
-$icon-price-tags: '\e936';
-$icon-user: '\e93c';
-$icon-user-profile: '\e971';
-$icon-users-group: '\e972';
-$icon-user-plus: '\e973';
-$icon-user-minus: '\e974';
-$icon-user-check: '\e975';
-$icon-user-tie: '\e976';
-$icon-books-library: '\e920';
-$icon-man: '\e9dc';
-$icon-woman: '\e9dd';
-$icon-man-woman: '\e9de';
-$icon-home: '\e906';
-$icon-bird-house: '\e907';
-$icon-home-dark: '\e908';
-$icon-list-number: '\e9bc';
-$icon-list-bullet: '\e945';
-$icon-list-todo: '\e9bd';
-$icon-warning: '\ea35';
-$icon-notification: '\ea36';
-$icon-information: '\ea3a';
-$icon-question-help: '\ea37';
-$icon-cancel-circle: '\ea3b';
-$icon-blocked: '\ea3c';
-$icon-plus: '\ea38';
-$icon-minus: '\ea39';
-$icon-cancel: '\ea3d';
-$icon-check-mark-d: '\ea3e';
-$icon-check-mark: '\ea3f';
-$icon-spell-check: '\ea40';
-$icon-search: '\e92e';
 $icon-phon: '\e937';
 $icon-phon-call: '\e947';
 $icon-cart-purchase: '\e93a';
@@ -249,81 +189,205 @@ $icon-bin-black: '\e9af';
 $icon-bin-trashcan: '\e9ae';
 $icon-cart: '\e943';
 $icon-cart-circle: '\e941';
-$icon-calendar: '\e939';
-$icon-compare: '\e912';
 $icon-login: '\e968';
-$icon-fonticons: '\f280';
-$icon-paper-clip: '\f0c6';
-$icon-cut: '\f0c4';
-$icon-copy-files-o: '\f0c5';
-$icon-check-square-o: '\f046';
-$icon-square-o: '\f096';
-$icon-envelope: '\f003';
-$icon-file: '\e914';
-$icon-file-text: '\e915';
-$icon-sort-alpha-asc: '\f15d';
-$icon-sort-alpha-desc: '\f15e';
-$icon-save: '\f0c7';
-$icon-exchange: '\f0ec';
-$icon-book: '\f02d';
-$icon-window-close: '\f2d3';
-$icon-expeditedssl: '\f23e';
-$icon-angle-left: '\f104';
-$icon-angle-right: '\f105';
-$icon-angle-up: '\f106';
-$icon-angle-down: '\f107';
-$icon-fire-resistance: '\e905';
-$icon-folder-closed: '\f07b';
-$icon-folder-open: '\f07c';
-$icon-folder-closed-o: '\f116';
-$icon-folder-open-o: '\f117';
-$icon-bookmark-lg: '\f02e';
-$icon-bookmark-o: '\f097';
-$icon-black-tie: '\f27e';
-$icon-phone: '\f095';
-$icon-user-o: '\e911';
-$icon-sign-out: '\e916';
-$icon-sign-in: '\e917';
-$icon-cloud-download: '\f0ed';
-$icon-cloud-upload: '\f0ee';
-$icon-power-off: '\f011';
-$icon-signal: '\f012';
-$icon-list-alt: '\f022';
-$icon-flag-lg: '\f024';
-$icon-star: '\f005';
-$icon-star-o: '\f006';
-$icon-toggle-off: '\f204';
-$icon-toggle-on: '\f205';
-$icon-rub: '\f159';
-$icon-drivers-license: '\f2c2';
-$icon-drivers-license-o: '\f2c3';
-$icon-truck: '\f0d1';
-$icon-wrench: '\f0ad';
-$icon-magic: '\f0d0';
-$icon-tasks: '\f0ae';
-$icon-table: '\f0ce';
-$icon-users-tie: '\e90f';
-$icon-cogs-gears: '\e995';
-$icon-cogs-gear: '\f085';
-$icon-cog-md: '\f013';
-$icon-cog-lg: '\e994';
-$icon-globe: '\e903';
-$icon-visa: '\f1f0';
-$icon-mastercard: '\f1f1';
-$icon-discover: '\f1f2';
-$icon-amex: '\f1f3';
-$icon-pay-pal: '\f1f4';
-$icon-stripe: '\f1f5';
-$icon-compress: '\f066';
-$icon-hand-grab-o: '\f255';
-$icon-hand-paper-o: '\f256';
-$icon-hand-scissors-o: '\f257';
-$icon-hand-lizard-o: '\f258';
-$icon-hand-spock-o: '\f259';
-$icon-hand-pointer-o: '\f25a';
-$icon-hand-peace-o: '\f25b';
-$icon-hand-shake: '\f2b5';
-$icon-thumbs-up: '\f087';
-$icon-thumbs-down: '\f088';
-$icon-css3: '\e900';
-$icon-resistance: '\e904';
+$icon-consultancy: '\e902';
+$icon-consulting: '\e90c';
+$icon-sphere-globe: '\e9c9';
+$icon-share-social: '\ea82';
+$icon-home: '\e906';
+$icon-bird-house: '\e907';
+$icon-home-dark: '\e908';
+$icon-credit-card: '\e93f';
+$icon-flag: '\e9cc';
+$icon-rss: '\ea9b';
+$icon-rss-sq: '\ea9c';
+$icon-bubble-comment: '\e96b';
+$icon-bubbles-comments-t: '\e96c';
+$icon-bubbles-comments-f: '\e96d';
+$icon-bubble-comment-l: '\e96e';
+$icon-bubbles-comments-lb: '\e96f';
+$icon-bubbles-comments-lbf: '\e970';
+$icon-man: '\e9dc';
+$icon-woman: '\e9dd';
+$icon-man-woman: '\e9de';
+$icon-user: '\e93c';
+$icon-user-profile: '\e971';
+$icon-users-group: '\e972';
+$icon-user-plus: '\e973';
+$icon-community: '\e901';
+$icon-user-minus: '\e974';
+$icon-user-check: '\e975';
+$icon-user-tie: '\e976';
+$icon-point-up: '\ea03';
+$icon-point-right: '\ea04';
+$icon-point-down: '\ea05';
+$icon-point-left: '\ea06';
+$icon-question-help: '\ea37';
+$icon-cancel-circle: '\ea3b';
+$icon-blocked: '\ea3c';
+$icon-circle-left: '\ea4e';
+$icon-circle-right: '\ea4c';
+$icon-circle-down: '\ea4d';
+$icon-circle-up: '\ea4b';
+$icon-expand-collapse: '\e98b';
+$icon-shrink-collapse: '\e98c';
+$icon-arrow-up-left: '\ea43';
+$icon-arrow-up: '\ea44';
+$icon-arrow-up-right: '\ea45';
+$icon-arrow-right: '\ea46';
+$icon-arrow-down-right: '\ea47';
+$icon-arrow-down: '\ea48';
+$icon-arrow-down-left: '\ea49';
+$icon-arrow-left: '\ea4a';
+$icon-undo-prew: '\e967';
+$icon-redo-next: '\e979';
+$icon-forward-left: '\e97e';
+$icon-forward-righ: '\e985';
+$icon-angle-double-down: '\e948';
+$icon-angle-double-up: '\e949';
+$icon-angle-double-right: '\e94a';
+$icon-angle-double-left: '\e94b';
+$icon-angles-left-solid: '\e94c';
+$icon-angles-right-solid: '\e94f';
+$icon-angles-up-solid: '\e94d';
+$icon-angles-down-solid: '\e94e';
+$icon-terminal: '\ea81';
+$icon-libreoffice: '\eae3';
+$icon-books-library: '\e920';
+$icon-download: '\e9c5';
+$icon-upload: '\e9c6';
+$icon-download-save: '\e9c7';
+$icon-up-load: '\e9c8';
+$icon-bookmark: '\e9d2';
+$icon-bookmarks: '\e9d3';
+$icon-tags-black: '\e90a';
+$icon-tags: '\e909';
+$icon-price-tag: '\e935';
+$icon-price-tags: '\e936';
+$icon-image: '\e90d';
+$icon-pictures: '\e90e';
+$icon-folder-download: '\e933';
+$icon-folder-upload: '\e934';
+$icon-folder-open-directory: '\e930';
+$icon-folder-directory: '\e92f';
+$icon-folder-plus: '\e931';
+$icon-folder-minus: '\e932';
+$icon-enter-signin: '\ea41';
+$icon-exit-signout: '\ea42';
+$icon-file-word: '\eae1';
+$icon-file-excel: '\eae2';
+$icon-html-five-o: '\eae5';
+$icon-html-five: '\eae9';
+$icon-calendar: '\e939';
+$icon-warning: '\ea35';
+$icon-notification: '\ea36';
+$icon-information: '\ea3a';
+$icon-droplet: '\e90b';
+$icon-zoom-in: '\e987';
+$icon-contrast: '\e9d5';
+$icon-search: '\e92e';
+$icon-clipboard: '\e9b8';
+$icon-compare: '\e912';
+$icon-check-box: '\e946';
+$icon-link-chain: '\e9cb';
+$icon-lock-secure: '\e98f';
+$icon-unlocked: '\e990';
+$icon-power-cord: '\e9b7';
+$icon-tree-branches: '\e9be';
+$icon-cross-middle: '\e944';
+$icon-arrow-select: '\e93e';
+$icon-grid: '\e942';
+$icon-list-number: '\e9bc';
+$icon-list-bullet: '\e945';
+$icon-list-todo: '\e9bd';
+$icon-amazon: '\ea87';
+$icon-plus: '\ea38';
+$icon-minus: '\ea39';
+$icon-cancel: '\ea3d';
+$icon-check-mark-d: '\ea3e';
+$icon-check-mark: '\ea3f';
+$icon-spell-check: '\ea40';
+$icon-quotes-left: '\e977';
+$icon-quotes-right: '\e978';
+$icon-zoom-out: '\e988';
+$icon-en-large: '\e989';
+$icon-en-small: '\e98a';
+$icon-paragraph-left: '\ea77';
+$icon-paragraph-center: '\ea78';
+$icon-paragraph-right: '\ea79';
+$icon-paragraph-justify: '\ea7a';
+$icon-indent-increase: '\ea7b';
+$icon-indent-decrease: '\ea7c';
+$icon-video: '\e913';
+$icon-head-phones: '\e910';
+$icon-connection-wifi: '\e91b';
+$icon-podcast: '\e91c';
+$icon-feed-wave: '\e91d';
+$icon-mic: '\e91e';
+$icon-switch: '\e9b6';
+$icon-play: '\ea15';
+$icon-pause: '\ea16';
+$icon-stop: '\ea17';
+$icon-previous: '\ea18';
+$icon-next: '\ea19';
+$icon-backward: '\ea1a';
+$icon-forward: '\ea1b';
+$icon-repeat: '\ea2e';
+$icon-infinite: '\ea2f';
+$icon-shuffle-random: '\ea30';
+$icon-equalizer: '\e993';
+$icon-play-o: '\ea1c';
+$icon-pause-o: '\ea1d';
+$icon-stop-o: '\ea1e';
+$icon-backward-o: '\ea1f';
+$icon-forward-o: '\ea20';
+$icon-first-o: '\ea21';
+$icon-last-o: '\ea22';
+$icon-previous-o: '\ea23';
+$icon-next-o: '\ea24';
+$icon-eject-o: '\ea25';
+$icon-volume-high-o: '\ea26';
+$icon-volume-medium: '\ea27';
+$icon-volume-low: '\ea28';
+$icon-volume-mute: '\ea29';
+$icon-volume-mute-o: '\ea2a';
+$icon-volume-increase: '\ea2b';
+$icon-volume-decrease: '\ea2c';
+$icon-loop-repeat: '\ea2d';
+$icon-tab: '\ea4f';
+$icon-location: '\e924';
+$icon-enve-mail: '\e925';
+$icon-location-restroom: '\e926';
+$icon-arrow-outline-down: '\e927';
+$icon-arrow-outline-left: '\e928';
+$icon-arrow-outline-right: '\e929';
+$icon-arrow-outline-up: '\e92a';
+$icon-arrow-down-o: '\e92b';
+$icon-arrow-leftc-o: '\e92c';
+$icon-arrow-thin-down: '\e92d';
+$icon-arrow-thin-left: '\e93b';
+$icon-arrow-thin-right: '\e950';
+$icon-arrow-thin-up: '\e95a';
+$icon-arrow-up-o: '\e95b';
+$icon-refresh: '\e95c';
+$icon-reload: '\e95d';
+$icon-reply: '\e95e';
+$icon-reply-all: '\e95f';
+$icon-subdirectory-left: '\e960';
+$icon-subdirectory-right: '\e961';
+$icon-location-current: '\e962';
+$icon-pin: '\e963';
+$icon-color-palette: '\e964';
+$icon-badge: '\e965';
+$icon-battery-full: '\e966';
+$icon-battery-half: '\e969';
+$icon-battery-low: '\e96a';
+$icon-save-disk: '\e986';
+$icon-anchor: '\e98d';
+$icon-zoom-in-o: '\e98e';
+$icon-announcement: '\e991';
+$icon-view-hide: '\e992';
+$icon-view-show: '\e996';
+$icon-zoom-out-o: '\e997';
+$icon-edit-crop: '\e998';
+$icon-edit-cut: '\e999';
