--- a/#src/scss/section/section-hello.scss
+++ b/#src/scss/section/section-hello.scss
@@ -3,11 +3,13 @@
 	height: 100%;
 	display: grid;
 	grid-template-rows: 100%;
-	gap: 4rem;
+	gap: 3rem;
 	grid-template-columns: 1fr 6rem 1fr;
+
 	@include _690 {
-		grid-template-columns: 1fr 6rem;
-		grid-template-rows: 100% 100%;
+		grid-template-columns: 1fr;
+		grid-template-rows: 100%;
+		gap: 0;
 	}
 
 	// .hello-page__column
@@ -21,11 +23,9 @@
 			justify-content: end;
 			padding: 2.5rem 0;
 			justify-content: center;
+
 			@include _min-690 {
 				justify-content: flex-end;
-			}
-			@include _690 {
-				grid-column: 1 / 3;
 			}
 		}
 
@@ -33,7 +33,9 @@
 			border: 1px $border-color;
 			border-style: none solid;
 			justify-content: center;
+			z-index: 4;
 			background-color: $background-active-bar;
+
 			@include _690 {
 				grid-column: -2 / -1;
 			}
@@ -70,13 +72,12 @@
 	//.hello-page__row
 	&__row {
 		position: relative;
-		z-index: 3;
-		// width: 100%;
 		height: 100%;
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
 		max-width: 36rem;
+		z-index: 3;
 
 		@include _690 {
 			align-items: start;
@@ -93,6 +94,11 @@
 				flex: 0 1 15%;
 			}
 		}
+		@include _320 {
+			p {
+				font-size: 1.4rem;
+			}
+		}
 	}
 
 	//.hello-page__pagination-number
@@ -106,6 +112,7 @@
 		font-weight: 100;
 
 		.swiper-pagination-bullet {
+			text-shadow: #f67438 1px 0 10px;
 			cursor: pointer;
 			position: relative;
 			@include flex-align-center-justify-center;
@@ -116,15 +123,14 @@
 				height: 20px;
 				border-radius: 50%;
 				background: #00ffff1e;
-				box-shadow: $boxShadow;
+				box-shadow: 0px 0px 3px 1px $boxShadow;
 				scale: 0;
 				transition: scale 0.5s ease 0s;
 			}
 		}
 
 		.swiper-pagination-bullet-active {
-			color: $orange;
-			text-shadow: $orange 1px 0 10px;
+			color: $blue-light;
 			font-weight: 500;
 
 			&::before {
@@ -139,10 +145,14 @@
 		width: 100%;
 		font-size: 1.6rem;
 		color: $font-body-color;
-		padding: 2rem 0;
+		padding: 2rem 0 0;
 		letter-spacing: 1.2px;
+
 		p {
 			line-height: 150%;
+			&:not(:last-child) {
+				margin-bottom: 1.5rem;
+			}
 		}
 
 		@include _min-690 {
@@ -168,7 +178,7 @@
 		white-space: nowrap;
 		line-height: 200%; /* 4rem/2 */
 
-		@include _320 {
+		@include _375 {
 			font-size: 20px;
 		}
 		span {
