--- a/#src/scss/core/_mixins.scss
+++ b/#src/scss/core/_mixins.scss
@@ -74,6 +74,12 @@
 	}
 }
 
+@mixin _screen-490 {
+	@media screen and (max-width: 490px) {
+		@content;
+	}
+}
+
 @mixin _screen-920 {
 	@media screen and (max-width: 920px) {
 		@content;
@@ -85,93 +91,14 @@
 	}
 }
 // -----------------------------------------------------------------------------
-
-@mixin _1024 {
-	@media (max-width: 1024px) {
-		@content;
-	}
-}
-
-@mixin _992 {
-	@media (max-width: 992px) {
-		@content;
-	}
-}
-
-@mixin _920 {
-	@media (max-width: 920px) {
-		@content;
-	}
-}
-
-@mixin _920-1170 {
-	@media (min-width: 920.98px) and (max-width: 1170px) {
-		@content;
-	}
-}
-
-@mixin _690-1140 {
-	@media (min-width: 691px) and (max-width: 1140px) {
-		@content;
-	}
-}
-
-@mixin _1140-1024 {
-	@media (min-width: 1024px) and (max-width: 1140px) {
-		@content;
-	}
-}
-
-@mixin _920-1024 {
-	@media (min-width: 920px) and (max-width: 1024px) {
-		@content;
-	}
-}
-
-@mixin _768-920 {
-	@media (min-width: 768.98px) and (max-width: 920px) {
-		@content;
-	}
-}
-
-@mixin _490-1024 {
-	@media (min-width: 490px) and (max-width: 1024px) {
-		@content;
-	}
-}
-
-@mixin _490-920 {
-	@media (min-width: 490px) and (max-width: 920px) {
-		@content;
-	}
-}
-
-@mixin _320-920 {
-	@media (min-width: 320px) and (max-width: 920px) {
-		@content;
-	}
-}
-
-@mixin _690-768 {
-	@media (min-width: 690px) and (max-width: 768px) {
-		@content;
-	}
-}
-
-@mixin _490-690 {
-	@media (min-width: 490px) and (max-width: 690px) {
-		@content;
-	}
-}
-
 @mixin _min-1140 {
-	@media (min-width: 1140px) {
+	@media (min-width: 1140.99px) {
 		@content;
 	}
 }
 
 @mixin _min-1024 {
-	@media (min-width: 1024px) {
+	@media (min-width: 1024.99px) {
 		@content;
 	}
 }
@@ -182,26 +109,8 @@
 	}
 }
 
-@mixin _690-920 {
-	@media (min-width: 690.98px) and (max-width: 920px) {
-		@content;
-	}
-}
-
-@mixin _768 {
-	@media (max-width: 768.98px) {
-		@content;
-	}
-}
-
 @mixin _min-768 {
 	@media (min-width: 768.98px) {
-		@content;
-	}
-}
-
-@mixin _690 {
-	@media (max-width: 690.98px) {
 		@content;
 	}
 }
@@ -212,38 +121,50 @@
 	}
 }
 
-@mixin _375-920 {
-	@media (min-width: 375.98px) and (max-width: 920px) {
+@mixin _min-490 {
+	@media (min-width: 490.99px) {
 		@content;
 	}
 }
 
-@mixin _375-690 {
-	@media (min-width: 375.98px) and (max-width: 690px) {
+@mixin _min-375 {
+	@media (min-width: 375.99px) {
 		@content;
 	}
 }
 
-@mixin _320-690 {
-	@media (min-width: 330.98px) and (max-width: 690px) {
+@mixin _min-320 {
+	@media (min-width: 320.99px) {
+		@content;
+	}
+}
+// -----------------------------------------------------------------------------
+@mixin _1024 {
+	@media (max-width: 1024px) {
 		@content;
 	}
 }
 
-@mixin _375-490 {
-	@media (min-width: 376px) and (max-width: 490px) {
+@mixin _920 {
+	@media (max-width: 920px) {
+		@content;
+	}
+}
+
+@mixin _768 {
+	@media (max-width: 768px) {
+		@content;
+	}
+}
+
+@mixin _690 {
+	@media (max-width: 690px) {
 		@content;
 	}
 }
 
 @mixin _490 {
 	@media (max-width: 490px) {
-		@content;
-	}
-}
-
-@mixin _min-490 {
-	@media (min-width: 490px) {
 		@content;
 	}
 }
@@ -255,13 +176,103 @@
 }
 
 @mixin _375 {
-	@media (max-width: 375.98px) {
+	@media (max-width: 375px) {
 		@content;
 	}
 }
 
 @mixin _320 {
 	@media (max-width: 320px) {
+		@content;
+	}
+}
+// -----------------------------------------------------------------------------
+@mixin _920-1170 {
+	@media (min-width: 920.98px) and (max-width: 1170px) {
+		@content;
+	}
+}
+
+@mixin _1024-1140 {
+	@media (min-width: 1024px) and (max-width: 1140px) {
+		@content;
+	}
+}
+
+@mixin _690-1140 {
+	@media (min-width: 690.99px) and (max-width: 1140px) {
+		@content;
+	}
+}
+
+@mixin _920-1024 {
+	@media (min-width: 920.99px) and (max-width: 1024px) {
+		@content;
+	}
+}
+
+@mixin _490-1024 {
+	@media (min-width: 490.99px) and (max-width: 1024px) {
+		@content;
+	}
+}
+
+@mixin _768-920 {
+	@media (min-width: 768.98px) and (max-width: 920px) {
+		@content;
+	}
+}
+
+@mixin _690-920 {
+	@media (min-width: 690.98px) and (max-width: 920px) {
+		@content;
+	}
+}
+
+@mixin _490-920 {
+	@media (min-width: 490.99px) and (max-width: 920px) {
+		@content;
+	}
+}
+
+@mixin _375-920 {
+	@media (min-width: 375.98px) and (max-width: 920px) {
+		@content;
+	}
+}
+
+@mixin _320-920 {
+	@media (min-width: 320.99px) and (max-width: 920px) {
+		@content;
+	}
+}
+
+@mixin _690-768 {
+	@media (min-width: 690.99px) and (max-width: 768px) {
+		@content;
+	}
+}
+
+@mixin _490-690 {
+	@media (min-width: 490.99px) and (max-width: 690px) {
+		@content;
+	}
+}
+
+@mixin _375-690 {
+	@media (min-width: 375.98px) and (max-width: 690px) {
+		@content;
+	}
+}
+
+@mixin _375-490 {
+	@media (min-width: 376px) and (max-width: 490px) {
+		@content;
+	}
+}
+
+@mixin _320-690 {
+	@media (min-width: 330.98px) and (max-width: 690px) {
 		@content;
 	}
 }
