--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -39,7 +39,6 @@ $blue-light-not-active: #8bb0ff6c;
 //* ---------------------------- [Other colors] --------------------------------
 
 $blue-light: #7796f3;
-// $blue-light: #46bedd;
 $second-color: #002f5a;
 $colorSideText: #9bceb4;
 $yellow: #ecc673ee;
@@ -47,10 +46,10 @@ $orange: #f67438;
 $darkcyan: darkcyan;
 // -----------------------------------------------------------------------------
 $border-color: #3c548d49;
-$background-transparent: #002f5a9c;
+$background-transparent: #0e0e13da;
 // -----------------------------------------------------------------------------
-$boxShadow: 0px 0px 10px #000;
-$boxShadowSecond: 1px 1px 3px #000;
+$boxShadow: #000;
+$boxShadowSecond: #000;
 $BlackShadow: #091116;
 // -----------------------------------------------------------------------------
 
