--- a/#src/scss/layout/header.scss
+++ b/#src/scss/layout/header.scss
@@ -23,13 +23,14 @@
 
 	// .header-menu__arrow-search
 	&__arrow-search {
-		text-align: center;
-		width: 7rem;
+		margin: 0 1rem;
+		width: 4rem;
 		height: 100%;
-		@include flex-align-center;
+		@include flex-align-center-justify-space-between;
+
 		.icon-angle-right,
 		.icon-angle-left {
-			font-size: 1.4rem;
+			font-size: 1.8rem;
 		}
 	}
 
@@ -43,6 +44,9 @@
 		border-radius: 0.5rem;
 		background: $background-selected;
 		color: $font-comment-collor;
+		@include _375 {
+			width: 25rem;
+		}
 	}
 }
 
@@ -52,6 +56,7 @@
 		display: grid;
 		grid-template-columns: 4rem 1fr;
 		border-bottom: 1px solid $border-color;
+		background: $background-color-title;
 	}
 
 	// .header-content__menu
@@ -61,22 +66,41 @@
 		white-space: nowrap;
 		letter-spacing: 1.2px;
 		color: $blue-light;
+		background: $background-thumb;
+
+		@include _690 {
+			grid-template-columns: max-content 1fr max-content max-content;
+		}
+		@include _490 {
+			grid-template-columns: max-content 1fr 6rem max-content;
+		}
 	}
 
 	// .header-content__menu-column
 	&__menu-column {
-		@include flex-align-center;
-		@include _690 {
-			justify-content: flex-end;
-		}
+		display: flex;
+		justify-items: flex-start;
 
 		&:nth-child(2) {
 			border: 1px $border-color;
 			border-style: none solid;
+			@include _690 {
+				display: none;
+			}
 		}
 
-		&:nth-child(4) {
-			margin: 0 0.5rem;
+		&:nth-child(3) {
+			display: none;
+			@include _690 {
+				border: 1px solid $border-color;
+				border-style: none solid;
+				display: block;
+				font-size: 2.4rem;
+			}
+		}
+
+		&:nth-child(5) {
+			margin-right: 0.5rem;
 			@include _min-690 {
 				display: none;
 			}
@@ -85,13 +109,64 @@
 
 	// .header-content__item-btn
 	&__item-btn {
-		padding: 0 2rem;
 		height: 100%;
 		@extend .grad_underline;
+	}
+
+	// .header-content__item-btn--terminal
+	&__item-btn--terminal {
+		position: relative;
+		color: $blue-light-not-active;
+		min-width: 6rem;
+		width: 100%;
+
+		.icon-terminal {
+			width: 6rem;
+
+			&::before {
+				background: $background-thumb;
+				min-width: 6rem;
+				width: 6rem;
+				height: 4rem;
+				transition: all 0.3s ease-in-out;
+				@include flex-align-center-justify-center;
+			}
+		}
+
 		&._active {
-			background-size:
-				0 1px,
-				calc(100% - 0px) 1px;
+			.icon-terminal {
+				border-radius: 3px;
+				background: #000;
+				color: $blue-light;
+
+				&::before {
+					scale: -1.1;
+					position: absolute;
+					box-shadow: 0px 0px 4px 1px $boxShadow;
+					border: 1px solid $border-color;
+					border-radius: 3px;
+					transform: translateY(-3px);
+				}
+			}
+		}
+		@include flex-justify-center;
+	}
+
+	// .header-content__item-content
+	&__item-contact {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		position: relative;
+		padding: 0 2rem;
+
+		&:active {
+			color: $blue-light-not-active;
+		}
+
+		@include _490 {
+			padding: 0 0.5rem;
 		}
 	}
 
@@ -102,53 +177,61 @@
 		height: $headerHeight;
 		font-size: 1.4rem;
 		line-height: 285.714286%; /* 4rem/1.4 */
-		@include _425 {
-			padding: 0 1rem;
+
+		@include _490 {
+			padding: 0 0.5rem;
 		}
 	}
 
 	// .header-content__link
 	&__link {
+		position: relative;
 		height: 100%;
 		width: 100%;
-		@include flex-align-center;
+		@include flex-align-center-justify-center;
+		span {
+			text-shadow: 1px 0 10px $darkcyan;
+			@include _490 {
+				display: none;
+			}
+		}
+
+		.icon-e-mail {
+			vertical-align: middle;
+			position: absolute;
+			top: 0;
+
+			font-size: 2.6rem;
+			color: $blue-light-not-active;
+			@include _min-490 {
+				display: none;
+			}
+		}
 	}
 }
 
 .menu-top {
-	@include _690 {
-		position: absolute;
-		display: inline-block;
-		width: 100%;
-		top: 7.1rem;
-		opacity: 0;
-		height: calc(100% - 10.8rem);
-		transform: translate(-100%, 0);
-		transition: all 0.4s ease-in-out;
-		&.opened-menu {
-			z-index: 9;
-			opacity: 1;
-			transform: translate(0, 0);
-			background: $background-editor;
-		}
-	}
-
 	// .menu-top__items
 	&__items {
+		z-index: 9;
 		height: 100%;
 		cursor: pointer;
 		@include flex-align-center;
+
 		@include _690 {
-			padding: 2rem 0;
-			display: block;
+			border: 1px solid $border-color;
+			background: $background-active-bar;
+			border-radius: 0.5rem;
 			flex-direction: column;
 			align-items: start;
+			width: 100%;
 		}
 	}
 
 	// .menu-top__item-btn
 	&__item-btn {
 		height: 100%;
+		width: 100%;
 		cursor: pointer;
 		padding: 0 2rem;
 		color: $blue-light-not-active;
@@ -167,9 +250,8 @@
 
 		@include _690 {
 			height: 4rem;
-			margin: 0 1rem;
-			padding-left: 1rem;
 			border-bottom: 1px solid $border-color;
+
 			&:not(:last-child) {
 				margin-bottom: 1rem;
 				line-height: 250%; /* 4rem/1.6 */
@@ -195,14 +277,17 @@
 					background: $background-selected;
 				}
 			}
+
 			.folder-open-directory {
 				display: block;
 				fill: $blue-light;
 			}
+
 			.folder-directory {
 				display: none;
 			}
 		}
+
 		@include _min-690 {
 			&:not(:last-child) {
 				border-right: 1px solid $border-color;
@@ -222,10 +307,15 @@
 
 	// .menu-top__svg-img
 	&__svg-img {
-		width: 2.5rem;
-		height: 4rem;
-		fill: $blue-light-not-active;
 		margin-right: 1rem;
+		width: 3.5rem;
+		height: 2.5rem;
+		fill: $blue-light-not-active;
+
+		@include _690 {
+			width: 2rem;
+		}
+
 		&.folder-open-directory {
 			display: none;
 		}
