--- a/#src/scss/pages/main-content.scss
+++ b/#src/scss/pages/main-content.scss
@@ -12,7 +12,6 @@
 	// .main-content__main-side
 	&__side-bar {
 		border-right: 1px solid $border-color;
-		z-index: 2;
 		min-height: 100%;
 	}
 
@@ -20,8 +19,29 @@
 	&__editor {
 		position: relative;
 		width: 100%;
-
+		z-index: 2;
 		overflow: hidden;
 		border-top: 1px solid #0000004d;
+	}
+}
+// -----------------------------------------------------------------------------
+.move-content {
+	padding: 1rem;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	transform: translateX(-100%);
+	transition:
+		transform 0.5s ease 0s,
+		opacity 0.8s ease 0s;
+	background: $background-transparent;
+	opacity: 0;
+	z-index: 9;
+
+	&.opened-menu {
+		opacity: 1;
+		transform: translateX(0);
 	}
 }
